[package]
name = "pg-bindgen-test"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy_static = "1.4.0"
pgx = { version = "0.4.5", features = ["pg12"] }
serde_json = "1.0.81"
datafusion = "9.0.0"
async-trait = "0.1.41"
tokio = { version = "1.0", features = ["macros", "rt", "rt-multi-thread", "sync", "fs", "parking_lot"] }

# for the CLI
clap = { version = "3", features = ["derive", "cargo"] }
datafusion-cli = "9.0.0"
mimalloc = { version = "0.1", default-features = false }
dirs = "4.0.0"
env_logger = "0.9"

[build-dependencies]
bindgen = "0.60.1"